removed all ui stuff from client and removed the -std=c99 flag from client and server cflags

--- a/server/Makefile
+++ b/server/Makefile
@@ -25,7 +25,11 @@ include ../config.mk
 
 server_objs = $(objs)
 libs = $(DAGAMELIBDIR) $(DAGAMELIB) -lpthread
+uilibs = $(UILIB)
+
+#CFLAGS := -g $(UIINCDIR) -std=c99
 
 server: $(server_objs) $(DAGAMELIBARCHIVE)
-	gcc $(CFLAGS) -o $@ $(server_objs) $(libs) 
+	gcc $(CFLAGS) -o $@ $(server_objs) $(libs) $(uilibs) $(UILIBS)
+
 
